--- a/index.html
+++ b/index.html
@@ -9,50 +9,113 @@
     <link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700|Oswald:400,300,700|Raleway:400,100,200,300,600,500,700,800,900&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/color.css" rel="stylesheet">
 	
 </head><!--/head-->
 
-<body>
-	<header id="header" role="banner">		
-		<div class="main-nav">
-			<div class="container">
-				<div class="header-top">
-					<div class="pull-right social-icons">
-						<a></a>
-					</div>
-				</div>     
-		        <div class="row">	        		
-		            <div class="navbar-header">
-		                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-		                    <span class="sr-only">Toggle navigation</span>
-		                    <span class="icon-bar"></span>
-		                    <span class="icon-bar"></span>
-		                    <span class="icon-bar"></span>
-		                </button>
-		                <a class="navbar-brand" href="infox.html">
-		                	<img class="img-responsive" src="images/brand.png" alt="logo">
-		                </a>                    
-		            </div>
-		            <div class="collapse navbar-collapse">
-		                <ul class="nav navbar-nav navbar-right">                 
-		                    <li class="scroll active"><a href="#home">Home</a></li>
-		                    <li class="scroll"><a href="#explore">Explore</a></li>                         
-		                    <li class="scroll"><a href="#about">About</a></li>                     
-		                    <li class="scroll"><a href="#event">Event</a></li>
-		                    <li class="scroll"><a href="#sponsor">Sponsor</a></li>
-		                    <li class="scroll"><a href="#team">Team</a></li>
-		                    <!-- <li><a class="no-scroll" href="#" target="_blank">PURCHASE TICKETS</a></li> -->
-		                    <li class="scroll"><a href="#contact">Contact</a></li>       
-		                </ul>
-		            </div>
-		        </div>
+<body data-spy="scroll" data-target="#navHeader" data-offset="90">
+	
+	<!-- PRELOADER -->
+	<div id="loader">
+	</div>
+	<!-- /Preoader -->
+	<div class="container-fluid bg-1 visibli-md visible-lg" id="ieee-links">
+		<div class="container">
+			<div class="col-md-8 col-md-offset-4 pull-right">
+				<ul class="list-inline">
+					<li><a href="http://www.ieee.org/" target="_blank">IEEE.org</a></li>
+					<li>|</li>
+					<li><a href="http://ieeexplore.ieee.org/" target="_blank">IEEE Xplore Digital Library</a></li>
+					<li>|</li>
+					<li><a href="http://standards.ieee.org/" target="_blank">IEEE Standards Association</a></li>
+					<li>|</li>
+					<li><a href="http://spectrum.ieee.org/" target="_blank">Spectrum Online</a></li>
+					<li>|</li>
+					<li><a href="http://www.ieee.org/sitemap.html" target="_blank">More IEEE Sites</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<!-- Navbar -->
+	<nav id="header" role="banner">		
+		<div class="navbar navbar-default">
+	        <div class="container">	        		
+	            <div class="navbar-header">
+	                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+	                    <span class="sr-only">Toggle navigation</span>
+	                    <span class="icon-bar"></span>
+	                    <span class="icon-bar"></span>
+	                    <span class="icon-bar"></span>
+	                </button>
+	                <a class="navbar-brand col-sm-2" href="index.html">
+	                	<img class="img-responsive" src="images/logo.jpg" alt="logo">
+	                </a>                    
+	            </div>
+	            <div class="collapse navbar-collapse" id="navHeader">
+	                <ul class="nav navbar-nav navbar-right">                 
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Who we are? <span class="caret"></span></a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="#">About IEEE</a></li>
+								<li><a href="#">About IEEE GGSIPU</a></li>
+								<li><a href="#">Our Vision</a></li>
+								<li><a href="#">Benefits</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">What we do? <span class="caret"></span></a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="#">Events</a></li>
+								<li><a href="#">TechVeda</a></li>
+								<li><a href="#">Participation</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Our Team<span class="caret"></span></a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="#">Execom 2014-15</a></li>
+								<li><a href="#">Execom 2013-14</a></li>
+							</ul>
+						</li>
+	                    <li><a href="#contact">Join us</a></li>       
+	                    <li><a href="#contact">Contact</a></li>       
+	                </ul>
+	            </div>
 	        </div>
-        </div>                    
-    </header>
-    <!--/#header--> 
+        </div>
+    </nav>
+    <!--/#Navbar--> 
 
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/jquery.singlePageNav.min.js"></script>
+	<!--script type="text/javascript" src="js/jquery.scrollTo.js"></script-->
+	<script>
+	//SmoothScroll
+    $('#navHeader').singlePageNav({
+                offset: $('#navHeader').outerHeight(),
+                filter: ':not(.external)',
+                updateHash: true,
+            });
+    //Preloader
+    $(window).load(function(){
+        $("#loader").fadeOut("slow");
+    });
+
+    //Dropdown transition
+    $(document).ready(function(){
+	    $(".dropdown").hover(            
+	        function() {
+	            $('.dropdown-menu', this).not('.in .dropdown-menu').stop( true, true ).slideDown("fast");
+	            $(this).toggleClass('open');        
+	        },
+	        function() {
+	            $('.dropdown-menu', this).not('.in .dropdown-menu').stop( true, true ).slideUp("fast");
+	            $(this).toggleClass('open');       
+	        }
+	    );
+	});
+    </script>
+
 </body>
 </html>
