--- a/index.html
+++ b/index.html
@@ -16,106 +16,184 @@
 <body data-spy="scroll" data-target="#navHeader" data-offset="90">
 	
 	<!-- PRELOADER -->
-	<div id="loader">
-	</div>
-	<!-- /Preoader -->
-	<div class="container-fluid bg-1 visibli-md visible-lg" id="ieee-links">
-		<div class="container">
-			<div class="col-md-8 col-md-offset-4 pull-right">
-				<ul class="list-inline">
-					<li><a href="http://www.ieee.org/" target="_blank">IEEE.org</a></li>
-					<li>|</li>
-					<li><a href="http://ieeexplore.ieee.org/" target="_blank">IEEE Xplore Digital Library</a></li>
-					<li>|</li>
-					<li><a href="http://standards.ieee.org/" target="_blank">IEEE Standards Association</a></li>
-					<li>|</li>
-					<li><a href="http://spectrum.ieee.org/" target="_blank">Spectrum Online</a></li>
-					<li>|</li>
-					<li><a href="http://www.ieee.org/sitemap.html" target="_blank">More IEEE Sites</a></li>
-				</ul>
+		<div id="loader">
+		</div>
+
+	<!-- External IEEE links -->
+		<div class="container-fluid bg-1 visibli-md visible-lg" id="ieee-links">
+			<div class="container">
+				<div class="col-md-8 col-md-offset-4 pull-right">
+					<ul class="list-inline">
+						<li><a href="http://www.ieee.org/" target="_blank">IEEE.org</a></li>
+						<li>|</li>
+						<li><a href="http://ieeexplore.ieee.org/" target="_blank">IEEE Xplore Digital Library</a></li>
+						<li>|</li>
+						<li><a href="http://standards.ieee.org/" target="_blank">IEEE Standards Association</a></li>
+						<li>|</li>
+						<li><a href="http://spectrum.ieee.org/" target="_blank">Spectrum Online</a></li>
+						<li>|</li>
+						<li><a href="http://www.ieee.org/sitemap.html" target="_blank">More IEEE Sites</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
-	</div>
+
 	<!-- Navbar -->
-	<nav id="header" role="banner">		
-		<div class="navbar navbar-default">
-	        <div class="container">	        		
-	            <div class="navbar-header">
-	                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-	                    <span class="sr-only">Toggle navigation</span>
-	                    <span class="icon-bar"></span>
-	                    <span class="icon-bar"></span>
-	                    <span class="icon-bar"></span>
-	                </button>
-	                <a class="navbar-brand col-sm-2" href="index.html">
-	                	<img class="img-responsive" src="images/logo.jpg" alt="logo">
-	                </a>                    
-	            </div>
-	            <div class="collapse navbar-collapse" id="navHeader">
-	                <ul class="nav navbar-nav navbar-right">                 
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Who we are? <span class="caret"></span></a>
-							<ul class="dropdown-menu" role="menu">
-								<li><a href="#">About IEEE</a></li>
-								<li><a href="#">About IEEE GGSIPU</a></li>
-								<li><a href="#">Our Vision</a></li>
-								<li><a href="#">Benefits</a></li>
-							</ul>
-						</li>
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">What we do? <span class="caret"></span></a>
-							<ul class="dropdown-menu" role="menu">
-								<li><a href="#">Events</a></li>
-								<li><a href="#">TechVeda</a></li>
-								<li><a href="#">Participation</a></li>
-							</ul>
-						</li>
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Our Team<span class="caret"></span></a>
-							<ul class="dropdown-menu" role="menu">
-								<li><a href="#">Execom 2014-15</a></li>
-								<li><a href="#">Execom 2013-14</a></li>
-							</ul>
-						</li>
-	                    <li><a href="#contact">Join us</a></li>       
-	                    <li><a href="#contact">Contact</a></li>       
-	                </ul>
-	            </div>
+		<nav id="navigation" role="banner">		
+			<div class="navbar navbar-default">
+		        <div class="container">	        		
+		            <div class="navbar-header">
+		                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+		                    <span class="sr-only">Toggle navigation</span>
+		                    <span class="icon-bar"></span>
+		                    <span class="icon-bar"></span>
+		                    <span class="icon-bar"></span>
+		                </button>
+		                <a class="navbar-brand col-sm-2" href="index.html">
+		                	<img class="img-responsive" src="images/logo.jpg" alt="logo">
+		                </a>                    
+		            </div>
+		            <div class="collapse navbar-collapse" id="navHeader">
+		                <ul class="nav navbar-nav navbar-right">                 
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Who we are? <span class="caret"></span></a>
+								<ul class="dropdown-menu" role="menu">
+									<li><a href="#">About IEEE</a></li>
+									<li><a href="#">About IEEE GGSIPU</a></li>
+									<li><a href="#">Our Vision</a></li>
+									<li><a href="#">Benefits</a></li>
+								</ul>
+							</li>
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">What we do? <span class="caret"></span></a>
+								<ul class="dropdown-menu" role="menu">
+									<li><a href="#">Events</a></li>
+									<li><a href="#">TechVeda</a></li>
+									<li><a href="#">Participation</a></li>
+								</ul>
+							</li>
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Our Team<span class="caret"></span></a>
+								<ul class="dropdown-menu" role="menu">
+									<li><a href="#">Execom 2014-15</a></li>
+									<li><a href="#">Execom 2013-14</a></li>
+								</ul>
+							</li>
+		                    <li><a href="#contact">Join us</a></li>       
+		                    <li><a href="#contact">Contact</a></li>       
+		                </ul>
+		            </div>
+		        </div>
 	        </div>
-        </div>
-    </nav>
-    <!--/#Navbar--> 
+	    </nav>
 
-    <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/jquery.singlePageNav.min.js"></script>
-	<!--script type="text/javascript" src="js/jquery.scrollTo.js"></script-->
-	<script>
-	//SmoothScroll
-    $('#navHeader').singlePageNav({
-                offset: $('#navHeader').outerHeight(),
-                filter: ':not(.external)',
-                updateHash: true,
-            });
-    //Preloader
-    $(window).load(function(){
-        $("#loader").fadeOut("slow");
-    });
+	<!-- Carousel/Slider -->
+		<section class="carousel slide" id="home-slider" data-ride="carousel" data-interval="2000">
+		<!-- Indicators -->
+			<ol class="carousel-indicators">
+				<li data-target="#home-slider" data-slide-to="0" class="active"></li>
+				<li data-target="#home-slider" data-slide-to="1"></li>
+				<li data-target="#home-slider" data-slide-to="2"></li>
+			</ol>
 
-    //Dropdown transition
-    $(document).ready(function(){
-	    $(".dropdown").hover(            
-	        function() {
-	            $('.dropdown-menu', this).not('.in .dropdown-menu').stop( true, true ).slideDown("fast");
-	            $(this).toggleClass('open');        
-	        },
-	        function() {
-	            $('.dropdown-menu', this).not('.in .dropdown-menu').stop( true, true ).slideUp("fast");
-	            $(this).toggleClass('open');       
-	        }
-	    );
-	});
-    </script>
+		<!-- Wrapper for slides -->
+			<div class="carousel-inner" role="listbox">
+			    <div class="item active">
+				    <img src="images/slider/bootcamp.jpg" alt="...">
+				    <div class="carousel-caption">
+					    <h3>Startup Bootcamp</h3>
+				    </div>
+			    </div>
+			    <div class="item">
+				    <img src="images/slider/wie.jpg" alt="...">
+				    <div class="carousel-caption">
+					    <h3>IEEE Delhi Student WIE meet</h3>
+				    </div>
+				</div>
+			    <div class="item">
+				    <img src="images/slider/dsc.jpg" alt="...">
+				    <div class="carousel-caption">
+					    <h3>IEEE Delhi Student Congress</h3>
+				    </div>
+			    </div>
+			    <div class="item">
+				    <img src="images/slider/python.jpg" alt="...">
+				    <div class="carousel-caption">
+					    <h3>Introductory Python Workshop</h3>
+				    </div>
+			    </div>
+			</div>
+
+		  <!-- Controls -->
+		  <a class="left carousel-control" href="#home-slider" role="button" data-slide="prev">
+		    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+		    <span class="sr-only">Previous</span>
+		  </a>
+		  <a class="right carousel-control" href="#home-slider" role="button" data-slide="next">
+		    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+		    <span class="sr-only">Next</span>
+		  </a>
+		  <!-- Timer "progress bar" -->
+            <hr class="transition-timer-carousel-progress-bar" />
+		</section>
+
+    <!-- SCRIPTS -->
+	    <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+	    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="js/jquery.singlePageNav.min.js"></script>
+		<!--script type="text/javascript" src="js/jquery.scrollTo.js"></script-->
+		<script>
+		//Smooth-Scroll
+	    $('#navHeader').singlePageNav({
+	                offset: $('#navHeader').outerHeight(),
+	                filter: ':not(.external)',
+	                updateHash: true,
+	            });
+	    //Preloader
+	    $(window).load(function(){
+	        $("#loader").fadeOut("slow");
+	    });
+
+	    //Dropdown transition
+	    $(document).ready(function(){
+		    $(".dropdown").hover(            
+		        function() {
+		            $('.dropdown-menu', this).not('.in .dropdown-menu').stop( true, true ).slideDown("fast");
+		            $(this).toggleClass('open');        
+		        },
+		        function() {
+		            $('.dropdown-menu', this).not('.in .dropdown-menu').stop( true, true ).slideUp("fast");
+		            $(this).toggleClass('open');       
+		        }
+		    );
+		});
+
+		//Carousel Progress bar
+		$(document).ready(function(){
+			var percent = 0, bar = $('.transition-timer-carousel-progress-bar'), crsl = $('#home-slider');
+			function progressBarCarousel() {
+			  bar.css({width:percent+'%'});
+			 percent = percent +0.5;
+			  if (percent>100) {
+			      percent=0;
+			      crsl.carousel('next');
+			  }      
+			}
+			crsl.carousel({
+			    interval: false,
+			    pause: true
+			}).on('slid.bs.carousel', function () {});var barInterval = setInterval(progressBarCarousel, 30);
+			crsl.hover(
+			    function(){
+			        clearInterval(barInterval);
+			    },
+			    function(){
+			        barInterval = setInterval(progressBarCarousel, 30);
+			    })
+		});
+
+		
+	    </script>
 
 </body>
 </html>
