--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head><!--/head-->
 
 <body data-spy="scroll" data-target="#navHeader" data-offset="90">
-	
+<div id="wrap">
+
 	<!-- PRELOADER -->
 		<div id="loader">
 		</div>
@@ -39,53 +40,53 @@
 		</div>
 
 	<!-- Navbar -->
-		<nav id="navigation" role="banner">		
-			<div class="navbar navbar-default">
-		        <div class="container">	        		
-		            <div class="navbar-header">
-		                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-		                    <span class="sr-only">Toggle navigation</span>
-		                    <span class="icon-bar"></span>
-		                    <span class="icon-bar"></span>
-		                    <span class="icon-bar"></span>
-		                </button>
-		                <a class="navbar-brand col-sm-2" href="index.html">
-		                	<img class="img-responsive" src="images/logo.jpg" alt="logo">
-		                </a>                    
-		            </div>
-		            <div class="collapse navbar-collapse" id="navHeader">
-		                <ul class="nav navbar-nav navbar-right">                 
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Who we are? <span class="caret"></span></a>
-								<ul class="dropdown-menu" role="menu">
-									<li><a href="#">About IEEE</a></li>
-									<li><a href="#">About IEEE GGSIPU</a></li>
-									<li><a href="#">Our Vision</a></li>
-									<li><a href="#">Benefits</a></li>
-								</ul>
-							</li>
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">What we do? <span class="caret"></span></a>
-								<ul class="dropdown-menu" role="menu">
-									<li><a href="#">Events</a></li>
-									<li><a href="#">TechVeda</a></li>
-									<li><a href="#">Participation</a></li>
-								</ul>
-							</li>
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Our Team<span class="caret"></span></a>
-								<ul class="dropdown-menu" role="menu">
-									<li><a href="#">Execom 2014-15</a></li>
-									<li><a href="#">Execom 2013-14</a></li>
-								</ul>
-							</li>
-		                    <li><a href="#contact">Join us</a></li>       
-		                    <li><a href="#contact">Contact</a></li>       
-		                </ul>
-		            </div>
+			<nav id="navigation" role="banner">		
+				<div class="navbar navbar-default">
+			        <div class="container">	        		
+			            <div class="navbar-header">
+			                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+			                    <span class="sr-only">Toggle navigation</span>
+			                    <span class="icon-bar"></span>
+			                    <span class="icon-bar"></span>
+			                    <span class="icon-bar"></span>
+			                </button>
+			                <a class="navbar-brand col-sm-2" href="index.html">
+			                	<img class="img-responsive" src="images/logo.jpg" alt="logo">
+			                </a>                    
+			            </div>
+			            <div class="collapse navbar-collapse" id="navHeader">
+			                <ul class="nav navbar-nav navbar-right">                 
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Who we are? <span class="caret"></span></a>
+									<ul class="dropdown-menu" role="menu">
+										<li><a href="#">About IEEE</a></li>
+										<li><a href="#">About IEEE GGSIPU</a></li>
+										<li><a href="#">Our Vision</a></li>
+										<li><a href="#">Benefits</a></li>
+									</ul>
+								</li>
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">What we do? <span class="caret"></span></a>
+									<ul class="dropdown-menu" role="menu">
+										<li><a href="#">Events</a></li>
+										<li><a href="#">TechVeda</a></li>
+										<li><a href="#">Participation</a></li>
+									</ul>
+								</li>
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Our Team<span class="caret"></span></a>
+									<ul class="dropdown-menu" role="menu">
+										<li><a href="#">Execom 2014-15</a></li>
+										<li><a href="#">Execom 2013-14</a></li>
+									</ul>
+								</li>
+			                    <li><a href="#contact">Join us</a></li>       
+			                    <li><a href="#contact">Contact</a></li>       
+			                </ul>
+			            </div>
+			        </div>
 		        </div>
-	        </div>
-	    </nav>
+		    </nav>	
 
 	<!-- Carousel/Slider -->
 		<section class="carousel slide" id="home-slider" data-ride="carousel" data-interval="2000">
@@ -94,12 +95,13 @@
 				<li data-target="#home-slider" data-slide-to="0" class="active"></li>
 				<li data-target="#home-slider" data-slide-to="1"></li>
 				<li data-target="#home-slider" data-slide-to="2"></li>
+				<li data-target="#home-slider" data-slide-to="3"></li>
 			</ol>
 
 		<!-- Wrapper for slides -->
 			<div class="carousel-inner" role="listbox">
 			    <div class="item active">
-				    <img src="images/slider/bootcamp.jpg" alt="...">
+				    <img src="images/slider/wie.jpg" alt="...">
 				    <div class="carousel-caption">
 					    <h3>Startup Bootcamp</h3>
 				    </div>
@@ -111,13 +113,13 @@
 				    </div>
 				</div>
 			    <div class="item">
-				    <img src="images/slider/dsc.jpg" alt="...">
+				    <img src="images/slider/wie.jpg" alt="...">
 				    <div class="carousel-caption">
 					    <h3>IEEE Delhi Student Congress</h3>
 				    </div>
 			    </div>
 			    <div class="item">
-				    <img src="images/slider/python.jpg" alt="...">
+				    <img src="images/slider/wie.jpg" alt="...">
 				    <div class="carousel-caption">
 					    <h3>Introductory Python Workshop</h3>
 				    </div>
@@ -137,22 +139,103 @@
             <hr class="transition-timer-carousel-progress-bar" />
 		</section>
 
+
+	<!-- Section-1 IEEE content -->
+		<div class="container-fluid section-1">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="demo hidden-xs hidden-sm">
+						<div class="demo__content" role="tabpanel">
+							<div class="demo__elems" role="tablist">
+								<div class="demo__elem demo__elem-1">What is IEEE?</div>
+								<div class="demo__elem demo__elem-2">Our Vision</div>
+								<div class="demo__elem demo__elem-3">Why you should join</div>
+								<span class="demo__hover demo__hover-1 active"><a class="demo__link" data-original="demo__hover-1" data-toggle="tab" href="#tab1"></a></span>
+								<span class="demo__hover demo__hover-2"><a class="demo__link" data-original="demo__hover-2" data-toggle="tab" href="#tab2"></a></span>
+								<span class="demo__hover demo__hover-3"><a class="demo__link" data-original="demo__hover-3" data-toggle="tab" href="#tab3"></a></span>
+								<div class="demo__highlighter">
+									<div class="demo__elems">
+										<div class="demo__elem">What is IEEE?</div>
+										<div class="demo__elem">Our Vision</div>
+										<div class="demo__elem">Why you should join</div>
+									</div>
+								</div>
+								<div class="demo__example">
+									<div class="demo__example-nb">
+										<div class="nb-inner">
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-8">
+					<div class="tab-content">
+						<div role="tabpanel" class="tab-pane fade in active" id="tab1">
+							<div class="page-header text-center">
+							<h1>What is IEEE?</h1>
+							</div>
+							<p class="col-md-8 col-md-offset-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio lorem, pretium ac velit at, venenatis semper leo. In porta non odio ut vehicula. Curabitur velit tortor, porta id rutrum vitae, maximus sed mauris. Etiam tristique lacinia nisi id vestibulum. Nam vehicula lorem vitae quam cursus, nec eleifend urna molestie. Fusce scelerisque molestie volutpat. Maecenas tincidunt lectus nec est egestas, nec iaculis enim porta. Donec nec malesuada urna. Proin a diam luctus, imperdiet erat at, ornare velit. Fusce id tempus mi, et facilisis elit. Aenean a vehicula enim. Nulla blandit tellus eu ultrices lacinia. Etiam euismod ut mi et bibendum. Praesent vitae convallis risus, id porttitor quam. Nulla facilisi. Pellentesque volutpat et purus non molestie.</p>
+						</div>
+						<div role="tabpanel" class="tab-pane fade in" id="tab2">
+							<div class="page-header text-center">
+							<h1>Our Vision</h1>
+							</div>
+							<p class="col-md-8 col-md-offset-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio lorem, pretium ac velit at, venenatis semper leo. In porta non odio ut vehicula. Curabitur velit tortor, porta id rutrum vitae, maximus sed mauris. Etiam tristique lacinia nisi id vestibulum. Nam vehicula lorem vitae quam cursus, nec eleifend urna molestie. Fusce scelerisque molestie volutpat. Maecenas tincidunt lectus nec est egestas, nec iaculis enim porta. Donec nec malesuada urna. Proin a diam luctus, imperdiet erat at, ornare velit. Fusce id tempus mi, et facilisis elit. Aenean a vehicula enim. Nulla blandit tellus eu ultrices lacinia. Etiam euismod ut mi et bibendum. Praesent vitae convallis risus, id porttitor quam. Nulla facilisi. Pellentesque volutpat et purus non molestie.</p>
+						</div>
+						<div role="tabpanel" class="tab-pane fade in" id="tab3">
+							<div class="page-header text-center">
+							<h1>Why you should join</h1>
+							</div>
+							<p class="col-md-8 col-md-offset-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio lorem, pretium ac velit at, venenatis semper leo. In porta non odio ut vehicula. Curabitur velit tortor, porta id rutrum vitae, maximus sed mauris. Etiam tristique lacinia nisi id vestibulum. Nam vehicula lorem vitae quam cursus, nec eleifend urna molestie. Fusce scelerisque molestie volutpat. Maecenas tincidunt lectus nec est egestas, nec iaculis enim porta. Donec nec malesuada urna. Proin a diam luctus, imperdiet erat at, ornare velit. Fusce id tempus mi, et facilisis elit. Aenean a vehicula enim. Nulla blandit tellus eu ultrices lacinia. Etiam euismod ut mi et bibendum. Praesent vitae convallis risus, id porttitor quam. Nulla facilisi. Pellentesque volutpat et purus non molestie.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	<!-- Section-2 Latest Updates -->
+		<div class="container-fluid">
+			<div class="page-header">
+				<h1>Latest Updates</h1>
+
+			</div>
+		</div>
+
+</div>
     <!-- SCRIPTS -->
 	    <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 	    <script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/jquery.singlePageNav.min.js"></script>
 		<!--script type="text/javascript" src="js/jquery.scrollTo.js"></script-->
 		<script>
-		//Smooth-Scroll
-	    $('#navHeader').singlePageNav({
-	                offset: $('#navHeader').outerHeight(),
-	                filter: ':not(.external)',
-	                updateHash: true,
-	            });
 	    //Preloader
 	    $(window).load(function(){
 	        $("#loader").fadeOut("slow");
 	    });
+
+		//Smooth-Scroll
+//	    $('#navHeader').singlePageNav({
+//	                offset: $('#navHeader').outerHeight(),
+//	                filter: ':not(.external)',
+//	                updateHash: true,
+//	            });
+
+	    //Affix Navbar
+//	    $(document).ready(function() {
+//        
+//			$('#navigation').affix({
+//				offset: {
+//					top: $('#home-slider').height()}
+//			}); 
+//	      	$('#navigation').on('affix.bs.affix', function () {
+//	        	var navHeight = $('.navbar').outerHeight(true);
+//          $('#navigation + .container').css('margin-top', navHeight);
+//			});
+//	     	$('#navigation').on('affix-top.bs.affix', function () {
+//          	$('#navigation + .container').css('margin-top', 0);
+//			});
 
 	    //Dropdown transition
 	    $(document).ready(function(){
@@ -192,7 +275,18 @@
 			    })
 		});
 
-		
+		//Section Nav
+		var prev="demo__hover-1";
+		$('.demo__hover a').click(function(){
+        var v=$(this).attr('data-original');
+        if(prev!=v){
+        	e.preventDefault();
+        	$("."+prev).removeClass('active');
+        	$("."+v).addClass('active');
+            prev=v;
+        }
+	    });
+	 
 	    </script>
 
 </body>
