--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 </head><!--/head-->
 
-<body data-spy="scroll" data-target="#navHeader" data-offset="90">
+<body data-spy="scroll" data-target="#navHeader" data-offset="83">
 <div id="wrap">
 
 	<!-- PRELOADER -->
@@ -50,7 +50,7 @@
 			                    <span class="icon-bar"></span>
 			                    <span class="icon-bar"></span>
 			                </button>
-			                <a class="navbar-brand col-sm-2" href="index.html">
+			                <a class="navbar-brand" href="index.html">
 			                	<img class="img-responsive" src="images/logo.jpg" alt="logo">
 			                </a>                    
 			            </div>
@@ -59,10 +59,10 @@
 								<li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Who we are? <span class="caret"></span></a>
 									<ul class="dropdown-menu" role="menu">
-										<li><a href="#">About IEEE</a></li>
-										<li><a href="#">About IEEE GGSIPU</a></li>
-										<li><a href="#">Our Vision</a></li>
-										<li><a href="#">Benefits</a></li>
+										<li><a href="about.html">About IEEE</a></li>
+										<li><a href="about.html#aboutsb">About IEEE GGSIPU</a></li>
+										<li><a href="about.html#vision">Our Vision</a></li>
+										<li><a href="about.html#benefits">Benefits</a></li>
 									</ul>
 								</li>
 								<li class="dropdown">
@@ -141,7 +141,7 @@
 
 
 	<!-- Section-1 IEEE content -->
-		<div class="container-fluid section-1">
+		<div class="container section-1">
 			<div class="row">
 				<div class="col-md-4">
 					<div class="demo hidden-xs hidden-sm">
@@ -196,6 +196,7 @@
 		</div>
 
 	<!-- Section-2 Latest Updates -->
+	<section class="container-fluid section-2">
 		<div class="container">
 			<div class="page-header">
 				<h1>Latest Updates</h1>
@@ -227,6 +228,7 @@
 					</div>
 			</div>
 		</div>
+	</section>
 
 	<!-- Quote Carousel -->
 		<div class="container-fluid bg-quote">
@@ -299,24 +301,46 @@
 		    </div>
 		</div>
 
+	<!-- Footer -->
+		<footer>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-3 col-xs-12"></div>
+					<div class="col-md-4 col-sm-6">
+						<div class="page-header">
+							<h3>Get in touch</h3>
+						</div>
+					</div>
+					<div class="col-md-5 col-sm-6">
+						<div class="page-header">
+							<h3>Follow us</h3>
+						</div>
+						<div class="embed-responsive embed-responsive-4by3">
+							<div class="fb-page" data-href="https://www.facebook.com/ieeeusict" data-hide-cover="false" data-show-facepile="false" data-show-posts="true" data-width="400" data-height="600"></div>
+						</div>
+						<div id="fb-root"></div>
+					</div>
+				</div>
+				<hr>	
+				<div class="row">
+					<ul class="list-inline">
+						<li><a href="">Home</a></li>|
+						<li><a href="">Sitemap</a></li>|
+						<li><a href="">Contact</a></li>
+						<li class="pull-right">Designed and Developed by <a href="http://www.shubhamja.in" target="_blank">Shubham Jain</a></li>
+					</ul>
+					
+				</div>
+			</div>
+		</footer>
+
 </div>
 <!-- SCRIPTS -->
 	    <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 	    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="js/jquery.singlePageNav.min.js"></script>
-		<!--script type="text/javascript" src="js/jquery.scrollTo.js"></script-->
-		<script>
-	    //Preloader
-	    $(window).load(function(){
-	        $("#loader").fadeOut("slow");
-	    });
-
-		//Smooth-Scroll
-	//	    $('#navHeader').singlePageNav({
-	//	                offset: $('#navHeader').outerHeight(),
-	//	                filter: ':not(.external)',
-	//	                updateHash: true,
-	//	            });
+	    <script type="text/javascript" src="js/custom.js"></script>
+		
+	    <script type="text/javascript">
 
 		    //Affix Navbar
 	//	    $(document).ready(function() {
@@ -332,20 +356,6 @@
 	//	     	$('#navigation').on('affix-top.bs.affix', function () {
 	//          	$('#navigation + .container').css('margin-top', 0);
 	//			});
-
-	    //Dropdown transition
-		    $(document).ready(function(){
-			    $(".dropdown").hover(            
-			        function() {
-			            $('.dropdown-menu', this).not('.in .dropdown-menu').stop( true, true ).slideDown("fast");
-			            $(this).toggleClass('open');        
-			        },
-			        function() {
-			            $('.dropdown-menu', this).not('.in .dropdown-menu').stop( true, true ).slideUp("fast");
-			            $(this).toggleClass('open');       
-			        }
-			    );
-			});
 
 			//Carousel Progress bar
 			$(document).ready(function(){
