Join, execom fix and many more..

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head><!--/head-->
 
 <body data-spy="scroll" data-target="#navHeader" data-offset="83">
-<div id="wrap">
+<div id="wrap" class="bg-home">
 
 	<!-- PRELOADER -->
 		<div id="loader">
@@ -76,8 +76,8 @@
 								<li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Our Team<span class="caret"></span></a>
 									<ul class="dropdown-menu" role="menu">
-										<li><a href="#">Execom 2014-15</a></li>
-										<li><a href="#">Execom 2013-14</a></li>
+										<li><a href="office.html#201415">Execom 2014-15</a></li>
+										<li><a href="office.html#201314">Execom 2013-14</a></li>
 									</ul>
 								</li>
 			                    <li><a href="#contact">Join us</a></li>       
@@ -171,24 +171,31 @@
 					</div>
 				</div>
 				<div class="col-md-8">
+					<div class="tab-panel hidden-md hidden-lg">
+						<ul id="aboutNav" class="nav nav-pills nav-justified">
+						<li class="active"><a href="#tab1" data-toggle="tab">Who we are</a></li>
+						<li><a href="#tab2" data-toggle="tab">Our vision</a></li>
+						<li><a href="#tab3" data-toggle="tab">Why you should join</a></li>
+					</ul>
+					</div>
 					<div class="tab-content">
 						<div role="tabpanel" class="tab-pane fade in active" id="tab1">
 							<div class="page-header text-center">
 							<h1>What is IEEE?</h1>
 							</div>
-							<p class="col-md-8 col-md-offset-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio lorem, pretium ac velit at, venenatis semper leo. In porta non odio ut vehicula. Curabitur velit tortor, porta id rutrum vitae, maximus sed mauris. Etiam tristique lacinia nisi id vestibulum. Nam vehicula lorem vitae quam cursus, nec eleifend urna molestie. Fusce scelerisque molestie volutpat. Maecenas tincidunt lectus nec est egestas, nec iaculis enim porta. Donec nec malesuada urna. Proin a diam luctus, imperdiet erat at, ornare velit. Fusce id tempus mi, et facilisis elit. Aenean a vehicula enim. Nulla blandit tellus eu ultrices lacinia. Etiam euismod ut mi et bibendum. Praesent vitae convallis risus, id porttitor quam. Nulla facilisi. Pellentesque volutpat et purus non molestie.</p>
+							<p class="col-md-8 col-md-offset-2 col-xs-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio lorem, pretium ac velit at, venenatis semper leo. In porta non odio ut vehicula. Curabitur velit tortor, porta id rutrum vitae, maximus sed mauris. Etiam tristique lacinia nisi id vestibulum. Nam vehicula lorem vitae quam cursus, nec eleifend urna molestie. Fusce scelerisque molestie volutpat. Maecenas tincidunt lectus nec est egestas, nec iaculis enim porta. Donec nec malesuada urna. Proin a diam luctus, imperdiet erat at, ornare velit. Fusce id tempus mi, et facilisis elit. Aenean a vehicula enim. Nulla blandit tellus eu ultrices lacinia. Etiam euismod ut mi et bibendum. Praesent vitae convallis risus, id porttitor quam. Nulla facilisi. Pellentesque volutpat et purus non molestie.</p>
 						</div>
 						<div role="tabpanel" class="tab-pane fade in" id="tab2">
 							<div class="page-header text-center">
 							<h1>Our Vision</h1>
 							</div>
-							<p class="col-md-8 col-md-offset-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio lorem, pretium ac velit at, venenatis semper leo. In porta non odio ut vehicula. Curabitur velit tortor, porta id rutrum vitae, maximus sed mauris. Etiam tristique lacinia nisi id vestibulum. Nam vehicula lorem vitae quam cursus, nec eleifend urna molestie. Fusce scelerisque molestie volutpat. Maecenas tincidunt lectus nec est egestas, nec iaculis enim porta. Donec nec malesuada urna. Proin a diam luctus, imperdiet erat at, ornare velit. Fusce id tempus mi, et facilisis elit. Aenean a vehicula enim. Nulla blandit tellus eu ultrices lacinia. Etiam euismod ut mi et bibendum. Praesent vitae convallis risus, id porttitor quam. Nulla facilisi. Pellentesque volutpat et purus non molestie.</p>
+							<p class="col-md-8 col-md-offset-2 col-xs-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio lorem, pretium ac velit at, venenatis semper leo. In porta non odio ut vehicula. Curabitur velit tortor, porta id rutrum vitae, maximus sed mauris. Etiam tristique lacinia nisi id vestibulum. Nam vehicula lorem vitae quam cursus, nec eleifend urna molestie. Fusce scelerisque molestie volutpat. Maecenas tincidunt lectus nec est egestas, nec iaculis enim porta. Donec nec malesuada urna. Proin a diam luctus, imperdiet erat at, ornare velit. Fusce id tempus mi, et facilisis elit. Aenean a vehicula enim. Nulla blandit tellus eu ultrices lacinia. Etiam euismod ut mi et bibendum. Praesent vitae convallis risus, id porttitor quam. Nulla facilisi. Pellentesque volutpat et purus non molestie.</p>
 						</div>
 						<div role="tabpanel" class="tab-pane fade in" id="tab3">
 							<div class="page-header text-center">
 							<h1>Why you should join</h1>
 							</div>
-							<p class="col-md-8 col-md-offset-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio lorem, pretium ac velit at, venenatis semper leo. In porta non odio ut vehicula. Curabitur velit tortor, porta id rutrum vitae, maximus sed mauris. Etiam tristique lacinia nisi id vestibulum. Nam vehicula lorem vitae quam cursus, nec eleifend urna molestie. Fusce scelerisque molestie volutpat. Maecenas tincidunt lectus nec est egestas, nec iaculis enim porta. Donec nec malesuada urna. Proin a diam luctus, imperdiet erat at, ornare velit. Fusce id tempus mi, et facilisis elit. Aenean a vehicula enim. Nulla blandit tellus eu ultrices lacinia. Etiam euismod ut mi et bibendum. Praesent vitae convallis risus, id porttitor quam. Nulla facilisi. Pellentesque volutpat et purus non molestie.</p>
+							<p class="col-md-8 col-md-offset-2 col-xs-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio lorem, pretium ac velit at, venenatis semper leo. In porta non odio ut vehicula. Curabitur velit tortor, porta id rutrum vitae, maximus sed mauris. Etiam tristique lacinia nisi id vestibulum. Nam vehicula lorem vitae quam cursus, nec eleifend urna molestie. Fusce scelerisque molestie volutpat. Maecenas tincidunt lectus nec est egestas, nec iaculis enim porta. Donec nec malesuada urna. Proin a diam luctus, imperdiet erat at, ornare velit. Fusce id tempus mi, et facilisis elit. Aenean a vehicula enim. Nulla blandit tellus eu ultrices lacinia. Etiam euismod ut mi et bibendum. Praesent vitae convallis risus, id porttitor quam. Nulla facilisi. Pellentesque volutpat et purus non molestie.</p>
 						</div>
 					</div>
 				</div>
@@ -204,14 +211,14 @@
 			<div class="row">
 				<!-- Snippets -->
 					<div class="col-md-8">
-						<div class="col-md-10 snippet border-3-gray">
+						<div class="col-xs-10 snippet border-3-gray">
 							<h3>Update heading <small><date>23-04-2015</date></small>
 							</h3><hr>
 							<p class="text-justified">
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio lorem, pretium ac velit at, venenatis semper leo. In porta non odio ut vehicula. Curabitur velit tortor, porta id rutrum vitae, maximus sed mauris. Etiam tristique lacinia nisi id vestibulum.
 							</p>
 						</div>
-						<div class="col-md-10 snippet border-3-gray">
+						<div class="col-xs-10 snippet border-3-gray">
 							<h3>Update heading <small><date>23-04-2015</date></small>
 							</h3><hr>
 							<p class="text-justified">
@@ -249,7 +256,7 @@
             <blockquote>
               <div class="row">
                 <div class="col-sm-3 text-center">
-                  <img class="img-circle" src="http://wp-desk.com/lovinflat/images/persons/person_1.png" style="width: 100px;height:100px;">
+                  <img class="img-circle" src="images\faces\img-1.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
                   <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit!</p>
@@ -263,7 +270,7 @@
             <blockquote>
               <div class="row">
                 <div class="col-sm-3 text-center">
-                  <img class="img-circle" src="http://wp-desk.com/lovinflat/images/persons/person_2.png" style="width: 100px;height:100px;">
+                  <img class="img-circle" src="images\faces\img-2.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam auctor nec lacus ut tempor. Mauris.</p>
@@ -277,7 +284,7 @@
             <blockquote>
               <div class="row">
                 <div class="col-sm-3 text-center">
-                  <img class="img-circle" src="http://wp-desk.com/lovinflat/images/persons/person_3.png" style="width: 100px;height:100px;">
+                  <img class="img-circle" src="images\faces\img-3.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rutrum elit in arcu blandit, eget pretium nisl accumsan. Sed ultricies commodo tortor, eu pretium mauris.</p>
