--- a/join.html
+++ b/join.html
@@ -80,7 +80,7 @@
 										<li><a href="office.html#201314">Execom 2013-14</a></li>
 									</ul>
 								</li>
-			                    <li><a href="#contact">Join us</a></li>       
+			                    <li class="active"><a href="#contact">Join us</a></li>       
 			                    <li><a href="#contact">Contact</a></li>       
 			                </ul>
 			            </div>
@@ -90,41 +90,12 @@
 
 
 	<!-- Content -->
-		<div class="container-fluid bg-about">
+		<div class="container-fluid bg-join">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-3 scrollspy">
-						<ul id="aboutNav" class="nav nav-pills nav-stacked hidden-xs hidden-sm" data-spy="affix">
-							<li class="active"><a href="#aboutieee">About IEEE</a></li>
-							<li><a href="#aboutsb">About IEEE GGSIPU</a></li>
-							<li><a href="#vision">Our Vision</a></li>
-							<li><a href="#benefits">Benefits</a></li>
-						</ul>
-					</div>
-					<div class="col-md-7">
-						<section class="content" id="aboutieee">
-							<div class="page-header">
-								<div class="row">
-								<!-- <h3>About IEEE</h3> -->
-								<img class="img-responsive col-xs-6 col-xs-offset-3 col-sm-4 col-sm-offset-0 col-md-3" src="http://www.ieee.org/about/toolkit/masterbrand/20040816">
-								</div>
-							</div>
-							<p>IEEE, Institute Of Electrical And Electronics Engineers (IEEE, pronounced as I-Triple-E) is the 125 years old world’s largest technical society. The society is headquartered in New York dedicated to advancing technological innovation and excellence of humanity.</p>
-							<p>IEEE and its members inspire global community through its highly cited publications, conferences, technology standards and professional plus educational activities. Its student branches contribute a lot in developing an engineer student’s personality and technical skills. Every day, IEEE societies make a difference in the world and the lives of their members. Today, IEEE is serving more than 425,000 members who are geographically organized into 10 regions over 333 sections and 2,345 student branches that conduct and participate in its activities.</p>
-							<p>At the pre-college level, the IEEE works with industry, universities and government to raise student’s literacy in science, maths, engineering and technology. IEEE journals are consistently among the most named in electrical and electronics engineering, telecommunications and other technical fields. IEEE is a leading developer of international standards that underpin many of today’s telecommunications, information technology and power generation products and services. IEEE helps in discovering better career opportunities and gain a better understanding of the field.</p>
-
-							<div class="hr"></div>
-						</section>
-						<section class="content" id="aboutsb">
-							<div class="page-header"><h3>About IEEE GGSIPU</h3></div>
-							<div class="hr"></div>
-						</section>
-						<section class="content" id="vision">
-							<div class="page-header"><h3>Our Vision</h3></div>
-							<div class="hr"></div>
-						</section>
-						<section class="content" id="benefits">
-							<div class="page-header"><h3>Benefits</h3></div>
+					<div class="col-md-8 col-md-offset-2">
+						<section class="embed-responsive embed-responsive-301">
+							<iframe src="https://docs.google.com/forms/d/1LKzlT9-CXCbXoL_vY80a2eGBJhiWUYwaI_LpB_OJkBI/viewform?embedded=true" frameborder="0" data-width="700" data-height="1400" marginheight="0" marginwidth="0"></iframe>
 							<div class="hr"></div>
 						</section>
 					</div>
