--- a/contact.html
+++ b/contact.html
@@ -10,14 +10,15 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/color.css" rel="stylesheet">
-	<script src="js/modernizr.custom.js"></script>
+	
 </head><!--/head-->
 
 <body data-spy="scroll" data-target=".scrollspy" data-offset="148">
 <div id="wrap">
 
 	<!-- PRELOADER -->
-		<!-- <div id="loader"></div> -->
+		<div id="loader">
+		</div>
 
 
 	<!-- Navbar -->
@@ -75,12 +76,12 @@
 								<li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Our Team<span class="caret"></span></a>
 									<ul class="dropdown-menu" role="menu">
-										<li><a href="#201415" data-toggle="tab">Execom 2014-15</a></li>
-										<li><a href="#201314" data-toggle="tab">Execom 2013-14</a></li>
+										<li><a href="office.html#201415">Execom 2014-15</a></li>
+										<li><a href="office.html#201314">Execom 2013-14</a></li>
 									</ul>
 								</li>
 			                    <li><a href="join.html">Join us</a></li>       
-			                    <li><a href="contact.html">Contact</a></li>       
+			                    <li class="active"><a href="contact.html">Contact</a></li>       
 			                </ul>
 			            </div>
 			        </div>
@@ -89,156 +90,24 @@
 
 
 	<!-- Content -->
-		<div class="container-fluid bg-team">
+		<div class="container-fluid bg-contact">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-3 col-xs-12 scrollspy">
-						<ul id="aboutNav" class="nav nav-pills nav-stacked hidden-xs hidden-sm" data-spy="affix">
-							<li class="active"><a href="#201415" data-toggle="tab">Execom 2014-2015</a></li>
-							<li><a href="#201314" data-toggle="tab">Execom 2013-2014</a></li>
+					<div class="col-md-3">
+						<ul id="sideNav" class="nav nav-pills nav-stacked hidden-xs hidden-sm" data-spy="affix">
+							<li><a href="join.html">Join IEEE</a></li>
+							<li class="active"><a href="#">Contact Us</a></li>
 						</ul>
 					</div>
-					<div class="col-md-9 col-xs-12">
-						<div class="tab-content">
-							<section class="tab-pane fade in active" id="201415">
-								<div class="page-header"><h3>Executive Committee 2014-2015</h3></div>
-								<div>
-									<ul class="grid">
-										<li>
-											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
-												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
-												</figcaption>
-											</figure>
-										</li>
-										<li>
-											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
-												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
-												</figcaption>
-											</figure>
-										</li>
-										<li>
-											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
-												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
-												</figcaption>
-											</figure>
-										</li>
-										<li>
-											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
-												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
-												</figcaption>
-											</figure>
-										</li>
-										<li>
-											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
-												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
-												</figcaption>
-											</figure>
-										</li>
-										<li>
-											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
-												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
-												</figcaption>
-											</figure>
-										</li>
-										<li>
-											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
-												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
-												</figcaption>
-											</figure>
-										</li>
-										<li>
-											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
-												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
-												</figcaption>
-											</figure>
-										</li>
-									</ul>
-								</div>
-								<div class="hr"></div>
-							</section>
-							<section class="tab-pane fade in" id="201314">
-								<div class="page-header"><h3>Executive Committee 2013-2014</h3></div>
-								<div>
-									<ul class="grid">
-										<li>
-											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
-												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
-												</figcaption>
-											</figure>
-										</li>
-										<li>
-											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
-												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
-												</figcaption>
-											</figure>
-										</li>
-										<li>
-											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
-												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
-												</figcaption>
-											</figure>
-										</li>
-										<li>
-											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
-												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
-												</figcaption>
-											</figure>
-										</li>
-										<li>
-											<figure>
-												<img class="img-responsive" src="images/execom/shubham.jpg" alt="img02">
-												<figcaption>
-													<h3>Music</h3>
-													<span>Jacob Cummings</span>
-												</figcaption>
-											</figure>
-										</li>
-									</ul>
-								</div>
-								<div class="hr"></div>
-							</section>
-						</div>
+					<div class="col-md-8">
+						<section class="embed-responsive embed-responsive-301">
+							<iframe src="https://docs.google.com/forms/d/1LKzlT9-CXCbXoL_vY80a2eGBJhiWUYwaI_LpB_OJkBI/viewform?embedded=true" frameborder="0" data-width="700" data-height="1400" marginheight="0" marginwidth="0"></iframe>
+							<div class="hr"></div>
+						</section>
 					</div>
 				</div>
 			</div>
 		</div>
-
 	<!-- Footer -->
 		<footer>
 			<div class="container">
@@ -277,18 +146,14 @@
 	    <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 	    <script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/custom.js"></script>
-		<script src="js/toucheffects.js"></script>
+		<script type="text/javascript" src="js/scrollNav.js"></script>
 
-		 <script>
+		<script>
 
 		//affix offset
-		$('#aboutNav').affix({
+		$('#sideNav').affix({
     		offset: {
 			bottom: ($('footer').outerHeight(true)+25)}
-		});
-		$(function () {
-		   var activeTab = $('[href=' + location.hash + ']');
-		   activeTab && activeTab.tab('show');
 		});
 	    
 
