--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 </head><!--/head-->
 
-<body data-spy="scroll" data-target="#navHeader" data-offset="83">
+<body data-spy="scroll" data-target="#navHeader" data-offset="109">
 <div id="wrap" class="bg-home">
 
 	<!-- PRELOADER -->
@@ -51,7 +51,7 @@
 			                    <span class="icon-bar"></span>
 			                </button>
 			                <a class="navbar-brand" href="index.html">
-			                	<img class="img-responsive" src="images/logo.jpg" alt="logo">
+			                	<img class="img-responsive" src="images/logo_nav.png" alt="logo">
 			                </a>                    
 			            </div>
 			            <div class="collapse navbar-collapse" id="navHeader">
@@ -80,8 +80,8 @@
 										<li><a href="office.html#201314">Execom 2013-14</a></li>
 									</ul>
 								</li>
-			                    <li><a href="#contact">Join us</a></li>       
-			                    <li><a href="#contact">Contact</a></li>       
+			                    <li><a href="join.html">Join us</a></li>       
+			                    <li><a href="contact.html">Contact</a></li>       
 			                </ul>
 			            </div>
 			        </div>
