--- a/events.html
+++ b/events.html
@@ -75,8 +75,8 @@
 								<li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Our Team<span class="caret"></span></a>
 									<ul class="dropdown-menu" role="menu">
-										<li><a href="#201415" data-toggle="tab">Execom 2014-15</a></li>
-										<li><a href="#201314" data-toggle="tab">Execom 2013-14</a></li>
+										<li><a href="office.html#201415" data-toggle="tab">Execom 2014-15</a></li>
+										<li><a href="office.html#201314" data-toggle="tab">Execom 2013-14</a></li>
 									</ul>
 								</li>
 			                    <li><a href="join.html">Join us</a></li>       
